@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-03T08:20:23Z",
-  "count_outdated" : 262,
-  "uniques_outdated" : 153,
-  "count" : 269,
-  "uniques" : 159,
+  "timestamp" : "2022-06-03T16:26:46Z",
+  "count_outdated" : 270,
+  "uniques_outdated" : 160,
+  "count" : 275,
+  "uniques" : 164,
   "clones" : [
-    {
-      "timestamp": "2022-05-20T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 8 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 7 ]
-    },
     {
       "timestamp": "2022-05-30T00:00:00Z",
       "count": 3,
