@@ -1,12 +1,7 @@
 {
-  "count": 7,
+  "count": 5,
   "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2022-05-20T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2022-05-30T00:00:00Z",
       "count": 3,
